Added beginnings of monitoring UI

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,6 @@
 <template>
-  <div class="page-host">
+  <div class="page-host container">
+  	<div class="row"><br /></div>
     <router-view></router-view>
   </div>
 </template>
