Added Info modal

--- a/src/monitor.html
+++ b/src/monitor.html
@@ -1,6 +1,6 @@
 <template>
   <nav class="navbar">
-    <div class="col-md-4 col-md-offset-8 col-sm-1">
+    <div class="col-md-4 col-md-offset-8">
       <div class="input-group navbar-right">
         <span class="input-group-addon" id="sizing-addon1"><i class="fa fa-search"></i></span>
         <input id="search" type="text" class="form-control pull-right" value.bind="searchFilter" placeholder="Search" aria-label="groupSearch">
